--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,6 @@
 @import "tailwindcss";
+@custom-variant dark (&:where(.dark, .dark *));
+
 
 /* Hide scrollbar for Tailwind's scrollbar-hide utility */
 .scrollbar-hide::-webkit-scrollbar {
